# Blackfin-sports-group

./: .gitignore  HANDOFF.md  README.md  clients.yaml  pyproject.toml
.github/workflows/: build-apps.yml
packaging/: launcher.py
src/commission_engine/: app.py  cli.py
src/commission_engine/forecast/: engine.py  methods.py
src/commission_engine/ledger/: csv_source.py  hubspot_source.py  schema.py  spread.py
src/commission_engine/reconcile/: render.py  report.py
src/commission_engine/rules/: base.py  flat.py  registry.py  tiered.py
tests/: conftest.py  test_app.py  test_cli.py  test_golden_blast_media.py  test_loader.py  test_methods.py  test_report.py  test_rules.py  test_spread.py
tests/fixtures/: Blast_Media_Commission_Deals_Import.csv
